OneSignal service - wip

--- a/.env.development.template
+++ b/.env.development.template
@@ -4,3 +4,6 @@ DB_PASSWORD=fake-pass
 
 SWAGGER_USERNAME: username
 SWAGGER_PASSWORD: password
+
+ONESIGNAL_APP_ID: uuid_app_id
+REST_API_KEY: fake-rest-api-key
