--- a/.env.development.template
+++ b/.env.development.template
@@ -2,8 +2,11 @@ DATABASE_NAME=ihelp_dev
 DB_USERNAME=fake-username
 DB_PASSWORD=fake-pass
 
-SWAGGER_USERNAME: username
-SWAGGER_PASSWORD: password
+SWAGGER_USERNAME=username
+SWAGGER_PASSWORD=password
 
-ONESIGNAL_APP_ID: uuid_app_id
-REST_API_KEY: fake-rest-api-key
+ONESIGNAL_APP_ID=uuid_app_id
+REST_API_KEY=fake-rest-api-key
+
+FE_NEED_VIEW=https://iwanttohelp-vue.herokuapp.com/dashboard/needs/view
+FE_RECOMMENDED_NEED_VIEW=https://iwanttohelp-vue.herokuapp.com/dashboard/recommended_needs/view
