Add PAILLIER variables to development template

--- a/.env.development.template
+++ b/.env.development.template
@@ -10,3 +10,6 @@ REST_API_KEY=fake-rest-api-key
 
 FE_NEED_VIEW=https://iwanttohelp-vue.herokuapp.com/dashboard/needs/view
 FE_RECOMMENDED_NEED_VIEW=https://iwanttohelp-vue.herokuapp.com/dashboard/recommended_needs/view
+
+PAILLIER_PUBLIC=paillier-public
+PAILLIER_PRIVATE=paillier-private
